[package]
name = "hazard-eras"
version = "0.1.0"
edition = "2018"
authors = ["Igor Skokov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lagrang/hazard-eras"
documentation = "https://docs.rs/hazard-eras"
description = "Hazard eras based memory reclamation for Rust"
keywords = ["concurrent", "garbage", "lock-free", "atomic"]
categories = ["concurrency"]
include = ["src/", "LICENSE", "README.md", "CHANGELOG.md"]

[dev-dependencies]
rand = "0.8.3"